--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
    build:
      working_directory: ~/<project root directory>
      docker:
-       - image: circleci/<language>:<version TAG>
+       - image: circleci/java:1.8.0
      steps:
        - checkout
        - run: echo "hello world"
